<resources>
    <string name="app_name">G-Aide</string>
    <string name="textWelcome">Bienvenue sur</string>
    <string name="connectionButton">Se connecter</string>
    <string name="registerButton">S\'inscrire</string>
    <string name="presentationText">L\'application d\'aide intergénérationnelle namuroise</string>
    <string name="lastnameText">Nom</string>
    <string name="firstnameText">Prénom</string>
    <string name="mailText">Mail</string>
    <string name="phoneText">Téléphone</string>
    <string name="streetText">Rue</string>
    <string name="postalCodeText">Code postal</string>
    <string name="cityText">Ville</string>

    <string name="numberText">Numéro</string>
    <string name="countryText">Pays</string>
    <string name="offer_a_serviceButton">Proposer un service</string>
    <string name="search_a_serviceButton">Chercher un service</string>
    <string name="owner_service">Propiétaire du service</string>
    <string name="service_title">Titre du service</string>
    <string name="validate">Valider</string>
    <string name="mail_address">Addresse mail (ou Username)</string>
    <string name="password">Mot de passe</string>
    <string name="open">Ouvrir</string>
    <string name="my_activities">Mes services</string>
    <string name="my_comments">Mes commentaire</string>
    <string name="modifyButton">Modifier</string>
    <string name="profil">Profil</string>
    <string name="name_of_service">Nom du service</string>
    <string name="save_button">Sauvegarder</string>
    <string name="imagelogo">imageLogo</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="not_filled">Un des champs n\'est pas rempli</string>
    <string name="dont_match">Les mots de passe ne correspondent pas</string>
    <string name="error_adressMail">Vous n\'avez pas entré une adresse mail</string>
    <string name="add_comment">Ajouter un commentaire</string>
    <string name="services_given">Service effectué</string>
    <string name="services_done">Service reçu</string>
    <string name="select">Selectionner</string>
    <string name="loading">Chargement...</string>
    <string name="myPref">myPref</string>
    <string name="libelle_du_service">Libellé du service</string>
    <string name="description_service">Description du service</string>
    <string name="see_comment">Voir le commentaire</string>
    <string name="btn_ask_service">Demander le service</string>
    <string name="do_service">Effectuer ce service</string>
    <string name="disconnect">Disconnect</string>
    <string name="no_comment">Il n\'y a pas de commentaire</string>
    <string-array name="category_array">
        <item>Jeune</item>
        <item>Senior</item>
    </string-array>
</resources>
