<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.henallux.smartcities.view.MainActivity"
    android:scrollbarStyle="insideOverlay">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text ="@string/textWelcome"
                android:textSize="@dimen/TitlefontSize" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="15dp"
                app:srcCompat="@android:color/black"
                android:id="@+id/appLogo"
                android:layout_below="@+id/welcomeText"/>

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@+id/appLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/presentationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presentationText"
                android:layout_below="@+id/appName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/fontSize"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectionButton"
                android:id="@+id/connectionButtonMain"
                android:layout_below="@+id/presentationText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/ButtonfontSize"
                style="@style/btnColor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerButton"
                android:id="@+id/registerButtonMain"
                android:layout_below="@+id/connectionButtonMain"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/ButtonfontSize"
                style="@style/btnColor" />

            <!--<RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/presentationText">

                <fragment
                    tools:layout="@layout/activity_fragment_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragmentmain"
                    android:name="com.henallux.smartcities.FragmentMainActivity" />

            </RelativeLayout>-->



        </RelativeLayout>

    </ScrollView>





</LinearLayout>
