<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modif_profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="stateHidden"
    tools:context="com.henallux.smartcities.view.ModifProfilActivity">

    <TextView
        android:text="@string/lastnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastnameTextModifProfil"
        android:layout_alignBaseline="@+id/lastnameEditTextModifProfil"
        android:layout_alignBottom="@+id/lastnameEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/lastnameEditTextModifProfil"
        android:layout_toStartOf="@+id/lastnameEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/lastnameEditTextModifProfil"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:selectAllOnFocus="false" />

    <TextView
        android:text="@string/firstnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstnameTextModifProfil"
        android:layout_alignBaseline="@+id/firstnameTextEditTextModifProfil"
        android:layout_alignBottom="@+id/firstnameTextEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/firstnameTextEditTextModifProfil"
        android:layout_toStartOf="@+id/firstnameTextEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/firstnameTextEditTextModifProfil"
        android:layout_below="@+id/lastnameEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/mailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mailTextModifProfil"
        android:layout_alignBaseline="@+id/mailEditTextModifProfil"
        android:layout_alignBottom="@+id/mailEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/mailEditTextModifProfil"
        android:layout_toStartOf="@+id/mailEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/firstnameTextEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/mailEditTextModifProfil"
        android:enabled="false"/>

    <TextView
        android:text="@string/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneTextModifProfil"
        android:layout_alignBaseline="@+id/phoneEditTextModifProfil"
        android:layout_alignBottom="@+id/phoneEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/phoneEditTextModifProfil"
        android:layout_toStartOf="@+id/phoneEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/mailEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/phoneEditTextModifProfil"/>

    <TextView
        android:text="@string/streetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/streetTextProfil"
        android:layout_alignBaseline="@+id/streetEditTextModifProfil"
        android:layout_alignBottom="@+id/streetEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/streetEditTextModifProfil"
        android:layout_toStartOf="@+id/streetEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/streetEditTextModifProfil"
        android:layout_below="@+id/phoneEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numTextModifProfil"
        android:layout_alignBaseline="@+id/numEditTextModifProfil"
        android:layout_alignBottom="@+id/numEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/numEditTextModifProfil"
        android:layout_toStartOf="@+id/numEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numEditTextModifProfil"
        android:layout_below="@+id/streetEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/postalCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postalCodeTextModifProfil"
        android:layout_alignBaseline="@+id/postalCodeEditTextModifProfil"
        android:layout_alignBottom="@+id/postalCodeEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/postalCodeEditTextModifProfil"
        android:layout_toStartOf="@+id/postalCodeEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/postalCodeEditTextModifProfil"
        android:layout_below="@+id/numEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityTextModifProfil"
        android:layout_alignBaseline="@+id/cityEditTextModifProfil"
        android:layout_alignBottom="@+id/cityEditTextModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/cityEditTextModifProfil"
        android:layout_toStartOf="@+id/cityEditTextModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/postalCodeEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/cityEditTextModifProfil" />

    <TextView
        android:text="@string/countryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countryTextModifProfil"
        android:layout_alignBaseline="@+id/countryTextEditModifProfil"
        android:layout_alignBottom="@+id/countryTextEditModifProfil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/countryTextEditModifProfil"
        android:layout_toStartOf="@+id/countryTextEditModifProfil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/countryTextEditModifProfil"
        android:layout_below="@+id/cityEditTextModifProfil"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countryTextEditModifProfil"
        android:text="@string/save_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/save_button"
        style="@style/btnColor"/>

</RelativeLayout>

