<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.henallux.smartcities.view.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text ="@string/textWelcome"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/appLogo"
                android:layout_below="@+id/welcomeText"/>

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@+id/appLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/connectionEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_address"
                android:layout_below="@+id/appName"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/connectionEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/editTextMail" />

            <TextView
                android:id="@+id/connectionPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_below="@+id/editTextMail"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_below="@+id/connectionPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/editPassword" />

            <Button
                android:text="@string/connectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectionButtonConnection"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/editPassword"
                android:textColor="@color/colorAccent"
                android:background="@color/colorButton" />

            <ProgressBar
                style="@style/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/editTextMail"
                android:layout_centerHorizontal="true"
                android:id="@+id/progressBar"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:progressBackgroundTint="@color/colorButton" />

        </RelativeLayout>

</ScrollView>
